      is alloc'ed using calloc()
    * instrum_dls.c (load_instrument_dls): fixed the segfaulting bugs
      introduced by r5375 (github commit 68df4a5). simplified malloc()
      failure management by adding+using free_mid_instrument() copied
      from instrum.c.
    * timidity.c (do_song_load): tidy-up the failure/success cases.
      general whitespace tidy-up.

2015-03-03 (SVN):
    * snd_sdl.c: remove superfluous SDL_PauseAudio() and SDL_LockAudio()
      calls from the Shutdown() proc.
    * changed version date stamp to 2015-03-03.

2015-02-20 (SVN):
    * snd_flac.c, snd_mpg123.c: fix incorrect usage of decoder function
      return value in RewindStream() procedures.
    * bgmusic.c (BGM_UpdateStream): print msg if stream rewinding fails.
    * changed version date stamp to 2015-02-20.

2015-02-14 (SVN):
    * timidity: surround the struct _MidSample:low_vel and high_vel
      stuff with TIMIDITY_USE_DLS ifdefs.
    * timidity: fix resampler crashes (e.g. in rs_loop()) with broken
      situations.
    * timidity, resample.c (rs_plain): PRECALC_LOOPS counter bug fix.
      from timidity++-2.8.0 (1999-11-19 Masanao Izumo <mo@goice.co.jp>)
      Original form: i = (le - ofs) / incr + 1;        (Original)
      Fixed form:    i = (le - ofs + incr - 1) / incr; (Correct)

2014-11-28 (SVN):
    * q_endian.h: add WORDS_BIGENDIAN macro for autotools compatibility.
    * libs, timidity: sync with libTiMidity fork at
      https://github.com/sezero/libtimidity/
    * bumped the version date stamp to 2014-10-28.

2014-11-21/27 (SVN):
    * oslibs (macosx, windows): recompiled the FLAC decoder with
      CVE-2014-8962 and CVE-2014-9028 fixes applied from mainstream.

2014-11-22 (SVN):
    * gl_screen.c (SCR_ScreenShot_f): make sure we don't Sys_Error()
      due to buffer allocation failures.
    * bumped the version date stamp to 2014-11-22.

2014-10-20 (SVN):
    * fix issues on Windows systems with DPI scaling.
    * bumped the version date stamp to 2014-10-20.
